lab8/bulkhead/dateapi-virtual-service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        exact: /date
    route:
    - destination:
        host: dateapi
        port:
          number: 8080
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 15s 
    timeout: "1s"
